Version 1.1 (2012-12-xx)
-------------------------------------------------------------------------------

* New argument in closure "$put": keys



Version 1.0 (2012-12-04)
-------------------------------------------------------------------------------

* Initial release on CRAN